приложение доработано согласно макету